# open-udang

./: .gitignore  CLAUDE.md  Dockerfile.claude  Dockerfile.computer-use  Dockerfile.opencode  Dockerfile.openshrimp  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: release.yaml
src/open_shrimp/: agent.py  agent_tasks.py  agent_tool.py  bot.py  client_manager.py  config.py  dispatch_registry.py  hooks.py  main.py  prompt_suggestion.py  scheduler.py  setup.py  stream.py  tools.py
src/open_shrimp/handlers/: approval.py  commands.py  messages.py  questions.py  state.py  utils.py
src/open_shrimp/mcp_proxy/: __init__.py  config_reader.py  credentials.py  registry.py  server.py  stdio_manager.py
src/open_shrimp/opencode_client/: __init__.py  _http.py  client.py  errors.py  events.py  options.py  permission.py  process.py  sessions.py  sse.py  tool_names.py
src/open_shrimp/platform/macos/: app_setup.py
src/open_shrimp/review/: api.py
src/open_shrimp/sandbox/: __init__.py  base.py  docker.py  docker_helpers.py  libvirt.py  libvirt_helpers.py  lima.py  lima_helpers.py  lima_macos_helpers.py  manager.py  skill_paths.py
src/open_shrimp/terminal/: log_source.py
src/open_udang/: agent.py  bot.py  client_manager.py  config.py  dispatch_registry.py  hooks.py  main.py  markdown.py  service.py  setup.py  stream.py  tools.py  tunnel.py
src/open_udang/handlers/: messages.py
src/open_udang/review/: api.py  git_diff.py  git_stage.py
tests/: test_approval_keyboard.py  test_container.py  test_git_diff.py  test_git_stage.py  test_hooks_path_scope.py  test_libvirt_helpers.py  test_prompt_suggestion.py  test_resume_sandbox_sessions.py  test_service.py  test_setup.py  test_status_text.py  test_tunnel.py  test_vm_opencode_sandbox.py
tests/mcp_proxy/: test_config_reader.py  test_http_proxy.py  test_openshrimp_tools.py
tests/opencode_client/: conftest.py  mock_server.py  test_agent_tool.py  test_client.py  test_event_translation.py  test_integration.py  test_mcp_config.py  test_permission_bridge.py  test_permission_rules.py  test_process.py  test_sessions.py  test_sse.py  test_tool_names.py
tests/review/: test_api.py
web/config-app/src/components/: ContextEditor.tsx  TagInput.tsx
web/review-app/: package-lock.json
web/review-app/src/: App.tsx  main.tsx
web/review-app/src/components/: FilePicker.tsx  SummaryScreen.tsx  SwipeDeck.tsx
web/review-app/src/hooks/: useSwipe.ts
web/review-app/src/lib/: api.ts  auth.ts
web/review-app/src/styles/: global.css
website/public/: config-schema.json
website/scripts/: gen-config-schema.py
website/src/content/docs/: index.mdx
website/src/content/docs/deployment/: systemd.md
website/src/content/docs/getting-started/: configuration.mdx  first-conversation.md  telegram-setup.md
website/src/content/docs/guides/: computer-use.md  contexts.md  docker-sandbox.md  group-chats.md  lima-sandbox.md  mcp-servers.md  mini-apps.md  scheduled-tasks.md  speech-to-text.md  tool-approval.md  vm-sandbox.md
website/src/content/docs/reference/: commands.md  config.mdx  environment.md
