[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-udang"
version = "0.2.1"
description = "Telegram bot for remote Claude access via the Agent SDK"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "python-telegram-bot[httpx]",
    "aiosqlite",
    "pyyaml",
    "mistune>=3.0,<4.0",
    "starlette",
    "uvicorn[standard]",
]

[project.scripts]
openudang = "open_udang.main:main"

[tool.hatch.build.targets.sdist.force-include]
"web/review-app/dist" = "web/review-app/dist"

[tool.hatch.build.targets.wheel.force-include]
"web/review-app/dist" = "open_udang/review/static"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx",
]
