[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-shrimp"
dynamic = ["version"]
description = "Telegram bot for remote OpenCode agent access"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[httpx,job-queue]",
    "aiosqlite",
    "pyyaml",
    "mistune>=3.0,<4.0",
    "starlette",
    "uvicorn[standard]",
    "tree-sitter>=0.23,<1.0",
    "tree-sitter-bash>=0.23,<1.0",
    "platformdirs>=4.0",
    "watchfiles>=1.0",
    "ruamel.yaml>=0.18",
    "json5>=0.12",
]

[project.optional-dependencies]
macos = [
    "rumps>=0.4",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
]
libvirt = ["libvirt-python>=10.0"]

[project.scripts]
openshrimp = "open_shrimp.main:main"

[project.gui-scripts]
openshrimp-app = "open_shrimp.platform.macos.app:main"

[tool.hatch.build.targets.sdist.force-include]
"Dockerfile.opencode" = "Dockerfile.opencode"
"Dockerfile.computer-use" = "Dockerfile.computer-use"
"computer-use" = "computer-use"
"seccomp-dind.json" = "seccomp-dind.json"
"web/config-app/dist" = "web/config-app/dist"
"web/markdown-app/dist" = "web/markdown-app/dist"
"web/review-app/dist" = "web/review-app/dist"
"web/terminal-app/dist" = "web/terminal-app/dist"
"web/vnc-app/dist" = "web/vnc-app/dist"

[tool.hatch.build.targets.wheel.force-include]
"Dockerfile.opencode" = "open_shrimp/Dockerfile.opencode"
"Dockerfile.computer-use" = "open_shrimp/Dockerfile.computer-use"
"computer-use" = "open_shrimp/computer-use"
"seccomp-dind.json" = "open_shrimp/seccomp-dind.json"
"web/config-app/dist" = "open_shrimp/config_app/static"
"web/markdown-app/dist" = "open_shrimp/preview/static"
"web/review-app/dist" = "open_shrimp/review/static"
"web/terminal-app/dist" = "open_shrimp/terminal/static"
"web/vnc-app/dist" = "open_shrimp/vnc/static"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx",
]
